force-app/main/default/objects/OneDriveAuthProviderSettings__c/OneDriveAuthProviderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OneDriveAuthProviderSettings</label>
</CustomObject>