force-app/main/default/objects/OneDriveAuthProviderSettings__c/fields/access_token3__c.field-meta.xml
<CustomField>
    <fullName>access_token3__c</fullName>
    <label>access_token3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>