force-app/main/default/objects/OneDriveAuthProviderSettings__c/fields/LinkedDate__c.field-meta.xml
<CustomField>
    <fullName>LinkedDate__c</fullName>
    <label>LinkedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>