force-app/main/default/objects/OneDriveAuthProviderSettings__c/fields/refresh_token1__c.field-meta.xml
<CustomField>
    <fullName>refresh_token1__c</fullName>
    <label>refresh_token1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>